# PermGuard

./: .gitignore  LICENSE  README.md  install.sh  permguard.service  pyproject.toml  run.py
permguard/: __init__.py  __main__.py  main.py
permguard/core/: data.py  firewall.py  monitor.py  permissions.py  system.py  updater.py  usb_control.py
permguard/ui/: main_window.py  permission_dialog.py  styles.py  widgets.py
