[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "permguard"
version = "0.1.0"
description = "Android-like privacy & permission manager for Linux/KDE"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.4.0"]
keywords = ["privacy", "permissions", "linux", "kde", "security", "camera", "microphone"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Security",
]

[project.scripts]
permguard = "permguard.main:main"

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/PermGuard"
Issues     = "https://github.com/YOUR_USERNAME/PermGuard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["permguard*"]

[tool.setuptools.package-data]
permguard = ["assets/*"]
